Decouple Calcite PPL planning from ExprType
Rewrite the Calcite-side PPL planning surface so RelNode/RexNode code,
coercion, type checking, and UDF implementations operate on RelDataType
instead of bouncing through the v2 ExprType system.

UDT identity at planning time:
- UDTs (ExprDateType, ExprTimeType, ExprTimeStampType, ExprIPType,
  ExprBinaryType) are recognised via instanceof rather than getExprType().
  Subclasses are preserved through createTypeWithNullability /
  createTypeWithCharsetAndCollation via a cloneWith hook on
  ExprSqlType / ExprJavaType so the instanceof checks survive type-factory
  operations.

Calcite-side rewrites:
- CoercionUtils: new RelDataType-typed common-type resolver with an
  internal CoercionTag widening DAG that mirrors v2 semantics.
  Widening produces UDT-normalized temporal types and always makes the
  cast target nullable so safe cast + primitive aggregators do not NPE
  on parse failure.
- PPLTypeChecker: signatures expressed as List<List<RelDataType>>; adds
  renderTypeName() for error messages; folds DECIMAL to DOUBLE.
  isComparable() accepts UDT temporal vs standard temporal of same kind.
- PPLOperandTypes: exposes RelDataType signature constants
  (DATE_UDT, INTEGER_T, ...).
- PPLFuncImpTable.requiresNumericArgument: uses SqlTypeUtil.isNumeric
  and SqlTypeName.ANY for the "unknown-type" check.
- ExtendedRexBuilder, AddSubDate/Extract/Format/LastDay/PeriodName/
  TimestampAdd/TimestampDiff/Weekday/Span/WidthBucket and the ip UDFs
  branch on UDT classes and pass RelDataType through their implementors.
- visitCast in CalciteRexNodeVisitor maps AST DataType directly to
  RelDataType, removing the DataType.getCoreType() round-trip.
- CurrentFunction / FormatFunction take an internal Kind / boolean
  discriminator rather than an ExprCoreType.
- DatetimeExtension switches from ExprUDT enum to type-class checks.

Signed-off-by: Peng Huo <penghuo@gmail.com>